Fix Element#writeAttribute('encType', 'multipart/form-data') on dynamically created form elements in IE.
(cherry picked from commit ecb4bca986660804a0fdef434cf4961cc807b7d8)

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Fix Element#writeAttribute('encType', 'multipart/form-data') on dynamically created form elements in IE. (jddalton, kangax, NoiseEee)
+
 * Element#down on an input element should not raise error. (humeniuc, kangax)
 
 * Form#serializeElements should not serialize file inputs. (kangax, Lonesome Boy)
