Make Element#absolutize use Element#getDimensions to prevent certain failures in IE.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Make Element#absolutize use Element#getDimensions to prevent certain failures in IE. (kangax, jddalton)
+
 * Fix Element#writeAttribute('encType', 'multipart/form-data') on dynamically created form elements in IE. (jddalton, kangax, NoiseEee)
 
 * Element#down on an input element should not raise error. (humeniuc, kangax)
