* Fix an issue where Element#getHeight returns null if the height is set to "auto."
(cherry picked from commit fa639f3f68f54d61e81f8b065281e73f4454cc92)

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Fix an issue where Element#getHeight returns null if the height is set to "auto." (kangax, jddalton)
+
 * Make Element#absolutize use Element#getDimensions to prevent certain failures in IE. (kangax, jddalton)
 
 * Fix Element#writeAttribute('encType', 'multipart/form-data') on dynamically created form elements in IE. (jddalton, kangax, NoiseEee)
