Amend CHANGELOG for last couple changes.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
-* Fix an issue where Element#getHeight returns null if the height is set to "auto." (kangax, jddalton)
+* Fix an issue where Element#getHeight returns null if the height is set to "auto." (kangax, ylucas, jddalton)
 
-* Make Element#absolutize use Element#getDimensions to prevent certain failures in IE. (kangax, jddalton)
+* Make Element#absolutize use Element#getDimensions to prevent certain failures in IE. (kangax, pphilipp, jddalton)
 
 * Fix Element#writeAttribute('encType', 'multipart/form-data') on dynamically created form elements in IE. (jddalton, kangax, NoiseEee)
 
