--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,11 +6,11 @@
 
 * Allow query parameters for any HTTP method. (jddalton)
 
-* Form.Element.getValue should return null on unknown/unsupported elements. (jddalton)
+* Form.Element.getValue should return null on unknown/unsupported elements. (jddalton, tdd)
 
 * Ensure Element.hide and Element.show return an element, even if you pass an element ID. (jddalton)
 
-* Fix issue where setting type attribute for button element in Element constructor fails in IE. (jddalton)
+* Fix issue where setting type attribute for button element in Element constructor fails in IE. (jddalton, sakarit)
 
 * Ensure IE el.readAttribute('id') behaves properly when child element has id="id" or name="id". (jddalton) [#89 state:resolved] 
 
