Fix toString/valueOf sharing same method reference via closure in Class#addMethods. Use plain property assignment, since Object.extend fails to enumerate over toString/valueOf.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Fix toString/valueOf sharing same method reference via closure in Class#addMethods. Use plain property assignment, since Object.extend fails to enumerate over toString/valueOf. (kangax)
+
 * Fix Object.isFunction returning true for RegExp objects and NodeLists in WebKit. (kangax)
 
 * Fix issue where Ajax.Request does not work with local files in IE7. (jddalton)
