--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Ensure deprecated Position object methods use Element#getDimensions.  [jddalton]
+
 * Ensure Hash does not return keys from the prototype chain (e.g., constructor, valueOf, toString). (kangax)
 
 * Fix toString/valueOf sharing same method reference via closure in Class#addMethods. Use plain property assignment, since Object.extend fails to enumerate over toString/valueOf. (kangax)
