--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Ensure Object.isElement handles "falsy" values properly. (kangax)
+
 * Fix exiting test task on INT signal. (Samuel Lebeau)
 
 * Ensure deprecated Position object methods use Element#getDimensions. (jddalton)
