--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Fix for IE7 to access local files via Ajax.Request. Closes #8259. [hagen.seifert, jddalton]
+
 * Ensure CSS files have loaded before firing the dom:loaded event. [Diego Perini, jddalton]
 
 * Allow Form#request to pass the "submit" option to Form#serialize. [#66 state:resolved] [Ben Sommerville, jddalton, jodosha]
