--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Coerce Opera's version string into a number whenever we need to sniff. [Sam Holman, jddalton]
+
 * Amend previous checkin to restrict fix to Opera 9.5. [Andrew Dupont]
 
 * Fix issue where Opera gets confused by complex selectors in $$. [Paulo Pereira, Andrea Baron, jddalton] 
