--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Replace browser sniffing with capability detection in IE fork of String#unescapeHTML. [kangax]
+
 * Coerce Opera's version string into a number whenever we need to sniff. [Sam Holman, jddalton]
 
 * Amend previous checkin to restrict fix to Opera 9.5. [Andrew Dupont]
