--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Make Element#getDimensions always use offset(Height|Width) rather than client(Height|Width). [staaky, jddalton]
+
 * Make Function#argumentNames use Function.prototype.toString. [Garrett Smith, jddalton, kangax]
 
 * Rename variable in Form.Element.Serializers.select. [jddalton]
