--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+* Fix issues with Element#clonePosition and element border/padding. [staaky, jddalton]
+
 * Remove the redefinition of Element#getOffsetParent in IE. [staaky, jddalton]
 
 * Make Element#getDimensions always use offset(Height|Width) rather than client(Height|Width). [staaky, jddalton]
